<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ePistonStatus" Id="{e467826b-7960-408b-9608-9daa829dc831}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ePistonStatus :
(
	OPENED:=0,CLOSED,OPENING,CLOSING,ERROR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>