<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{7f0b71c9-3b96-49cc-b550-51f310230bab}">
    <Declaration><![CDATA[ //{attribute 'qualified_only'}
VAR_GLOBAL
	
	iNUMBER_OF_PISTONS: INT:=7;
	X_OFFSET: INT:=0;
	Y_OFFSET: INT:=0;
	stPISTON_PARAM: ARRAY[1..10] OF  ST_PISTON;
	fbPiston: ARRAY[1..10] OF FB_NEW_PISTON;
	fbCART: ARRAY[1..6] OF FB_CART;
	posArrX:ARRAY[1..12] OF INT:=[350+X_OFFSET,550+X_OFFSET,800+X_OFFSET,1050+X_OFFSET,1300+X_OFFSET,1575+X_OFFSET,1300+X_OFFSET,
									1050+X_OFFSET,800+X_OFFSET,550+X_OFFSET,350+X_OFFSET,100+X_OFFSET];
	posArrY:ARRAY[1..12] OF INT:=[493+Y_OFFSET,493+Y_OFFSET,493+Y_OFFSET,493+Y_OFFSET, 493+Y_OFFSET, 635+Y_OFFSET, 783+Y_OFFSET ,
									783+Y_OFFSET, 783+Y_OFFSET,783+Y_OFFSET,783+Y_OFFSET,635+Y_OFFSET];
	
	eMAIN_STATE: E_MAIN_STATE:= E_MAIN_STATE.uninit;
	eSTATION1_STATE: E_STATION_STATE:=E_STATION_STATE.uninit;
	eSTATION2_STATE: E_STATION_STATE:=E_STATION_STATE.uninit;
	eSTATION3_STATE: E_STATION_STATE:=E_STATION_STATE.uninit;
	eCONVAYOR_STATE: E_CONVAYOR_STATE:=E_CONVAYOR_STATE.uninit;
	
	bSTART: BOOL:=FALSE;// start main state machine
	bS1_RUNNING: BOOL:=FALSE; // station 1 is running
	bS2_RUNNING: BOOL:=FALSE; // station 2 is running
	bCONV_INPOS: BOOL:=FALSE; // convayor in position
	
	bPAUSE_MAIN: BOOL:=FALSE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>