<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN_CONVAYOR" Id="{230d7160-cfd8-4561-bda5-963e513f3cc2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN_CONVAYOR
VAR
	inc: INT:=0;
	temp: INT;
	state: INT:=0;
	total_length: INT;
	cart_space: INT;
	cornerX: INT;
	cornerY: INT;
	bMOVE:BOOL :=FALSE;
	bSTARTUP: BOOL:=FALSE;
	rtrigNext: R_TRIG;
	counter: INT;
	tNext: TON;
	tDelay: TON;
	bDELAY: BOOL:=FALSE;
	first_run: BOOL:=FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF first_run THEN
	A_set_cart_spaces();
END_IF

FOR counter:=1 TO 6 BY 1 DO
	fbCART[counter]();
END_FOR;
tDelay(IN:=bDELAY);
tNext(IN:=bMOVE , PT:=T#1S , Q=> , ET=> );

CASE eMAIN_CONVAYOR_STATE OF
	E_CONVAYOR_STATE.uninit:
		A_SETUP();
		eMAIN_CONVAYOR_STATE:=E_CONVAYOR_STATE.idle;
	
	E_CONVAYOR_STATE.idle:
		bDELAY:=FALSE;
		bMOVE:=FALSE;
		bCONV_MAIN_INPOS:=TRUE;
	
	E_CONVAYOR_STATE.do_move: // open advance piston and update carts
		IF bCONV_MAIN_INPOS THEN		 
			A_CARTS_STEP();
			fbPISTON[7].A_OPEN();
			bCONV_MAIN_INPOS:=FALSE;
		END_IF
		bMOVE:=TRUE;
		bCONV_MAIN_INPOS:=FALSE;
		IF fbPISTON[7].PistonStatus= ePistonStatus.OPENED THEN
			A_CARTS_STEP();
			bMOVE:=FALSE;
			bCONV_MAIN_INPOS:=TRUE;
			eMAIN_CONVAYOR_STATE:=E_CONVAYOR_STATE.st1;
		END_IF
	
	E_CONVAYOR_STATE.st1://delay and close advansed piston
		tDELAY.PT:=T#0.6S;
		bDELAY:=TRUE;
		IF tDelay.Q THEN
			fbPISTON[7].A_CLOSE();
			eMAIN_CONVAYOR_STATE:=E_CONVAYOR_STATE.done;
		END_IF
		IF fbPISTON[7].PistonStatus= ePistonStatus.CLOSED THEN
			//...
		END_IF		
	
	E_CONVAYOR_STATE.done:
		//...
	
	E_CONVAYOR_STATE.pause:
	//paused
	
END_CASE
	






	



]]></ST>
    </Implementation>
    <Action Name="A_CARTS_STEP" Id="{7a1e55b7-d701-499d-a448-d86c230d8eaf}">
      <Implementation>
        <ST><![CDATA[FOR counter:=1 TO 6 BY 1 DO
	fbCART[counter].A_STEP();
END_FOR;]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_set_cart_spaces" Id="{7d4d76aa-d053-4a28-a62b-1eb33cb8ead7}">
      <Implementation>
        <ST><![CDATA[total_length := (conv_height*2)+(conv_length*2);
cart_space := total_length /num_of_carts;

posArrX[inc]:= 0+X_OFFSET;
posArrY[inc]:= 0+(conv_height/2)+Y_OFFSET;

WHILE state = 0 DO
	IF posArrY[inc]-cart_space < Y_OFFSET THEN
		temp :=cart_space - (posArrY[inc]-Y_OFFSET);
		posArrX[inc]:= temp+X_OFFSET;
		posArrY[inc]:= 0+Y_OFFSET;
		state:=1;
	ELSE
		posArrX[inc]:= 0+X_OFFSET;
		posArrY[inc]:=posArrY[inc-1]- cart_space;
		inc :=inc+1;
	END_IF
	
END_WHILE

WHILE state = 1 DO
	IF posArrX[inc]+cart_space > (X_OFFSET+conv_length) THEN
		temp :=cart_space - ((X_OFFSET+conv_length)-posArrX[inc]);
		posArrX[inc]:= conv_length+X_OFFSET;
		posArrY[inc]:= temp+Y_OFFSET;
		state:=2;
	ELSE
		posArrX[inc]:= posArrX[inc-1]+cart_space;
		posArrY[inc]:=Y_OFFSET;
		inc :=inc+1;
	END_IF
	
END_WHILE

WHILE state = 2 DO
	IF posArrY[inc]+cart_space > (Y_OFFSET+conv_height) THEN
		temp :=cart_space - ((Y_OFFSET+conv_height)-posArrY[inc]);
		posArrX[inc]:= (conv_length+X_OFFSET)-temp;
		posArrY[inc]:= 0+Y_OFFSET+conv_height;
		state:=3;
	ELSE
		posArrX[inc]:= posArrX[inc-1]-cart_space;
		posArrY[inc]:=posArrY[inc-1]- cart_space;
		inc :=inc+1;
	END_IF
	
END_WHILE]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_SETUP" Id="{743a8297-84d8-4da3-9839-4637b3eb1bf1}">
      <Implementation>
        <ST><![CDATA[	bSTARTUP:=TRUE;
	fbCART[1].stCART.position:=1;
	fbCART[1].stCART.color:=1;
	fbCART[1].stCART.nNAME:='CART1';
	fbCART[1].stCART.posX:=posArrX[1];
	fbCART[1].stCART.posY:=posArrY[1];
	
	fbCART[2].stCART.position:=3;
	fbCART[2].stCART.color:=2;
	fbCART[2].stCART.nNAME:='CART2';
	fbCART[2].stCART.posX:=posArrX[3];
	fbCART[2].stCART.posY:=posArrY[3];
	
	fbCART[3].stCART.position:=5;
	fbCART[3].stCART.color:=3;
	fbCART[3].stCART.nNAME:='CART3';
	fbCART[3].stCART.posX:=posArrX[5];
	fbCART[3].stCART.posY:=posArrY[5];
	
	fbCART[4].stCART.position:=7;
	fbCART[4].stCART.color:=4;
	fbCART[4].stCART.nNAME:='CART4';
	fbCART[4].stCART.posX:=posArrX[7];
	fbCART[4].stCART.posY:=posArrY[7];
	
	fbCART[5].stCART.position:=9;
	fbCART[5].stCART.color:=5;
	fbCART[5].stCART.nNAME:='CART5';
	fbCART[5].stCART.posX:=posArrX[9];
	fbCART[5].stCART.posY:=posArrY[9];
	
	fbCART[6].stCART.position:=11;
	fbCART[6].stCART.color:=6;
	fbCART[6].stCART.nNAME:='CART6';
	fbCART[6].stCART.posX:=posArrX[11];
	fbCART[6].stCART.posY:=posArrY[11];]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>